minikube/istio/virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: airwavetech-demoservice-vs
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/airwavetech-demoservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5000
        host: demoservice
